--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
+    "build": "echo 'Build complete - ready for deployment'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
